force-app/main/default/objects/clariti__FiscalPeriod__c/clariti__FiscalPeriod__c.object-meta.xml
<CustomObject>
    <label>Fiscal Period</label>
    <nameField>
        <label>Fiscal Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>