force-app/main/default/objects/clariti__FiscalPeriod__c/fields/clariti__EndDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__EndDate__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>