force-app/main/default/objects/clariti__FiscalPeriod__c/fields/clariti__FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>clariti__FiscalYear__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fiscal Year</label>
    <referenceTo>clariti__FiscalYear__c</referenceTo>
    <relationshipLabel>Fiscal Periods</relationshipLabel>
    <relationshipName>FiscalPeriods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>