force-app/main/default/objects/clariti__FiscalPeriod__c/validationRules/clariti__FiscalYearMustBeInactiveOrActive.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__FiscalYearMustBeInactiveOrActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        $CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__FiscalYearAndPeriodManagement.clariti__Enable__c,
   OR(
     ISNEW(),
     ISCHANGED(clariti__FiscalYear__c)
     ),
   NOT(OR(
        ISPICKVAL(clariti__FiscalYear__r.clariti__Status__c ,&apos;Inactive&apos;),
        ISPICKVAL(clariti__FiscalYear__r.clariti__Status__c ,&apos;Active&apos;)
   ))
)</errorConditionFormula>
    <errorDisplayField>clariti__FiscalYear__c</errorDisplayField>
    <errorMessage>You can not relate a Fiscal Period with a Fiscal Year that is Open or Closed.</errorMessage>
</ValidationRule>