force-app/main/default/objects/clariti__FiscalPeriod__c/validationRules/clariti__FiscalYearMustBeReopened.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__FiscalYearMustBeReopened</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        $CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__FiscalYearAndPeriodManagement.clariti__Enable__c,
ISCHANGED(clariti__Status__c),
ISPICKVAL(PRIORVALUE(clariti__Status__c),&apos;Closed&apos;),
ISPICKVAL(clariti__Status__c, &apos;Open&apos;),
NOT(OR(
ISPICKVAL(clariti__FiscalYear__r.clariti__Status__c ,&apos;Open&apos;),
ISPICKVAL(clariti__FiscalYear__r.clariti__Status__c ,&apos;Active&apos;)
)
)
)</errorConditionFormula>
    <errorDisplayField>clariti__Status__c</errorDisplayField>
    <errorMessage>You have to reopen the related Fiscal Year in order to reopen a Fiscal Period</errorMessage>
</ValidationRule>