force-app/main/default/objects/clariti__FiscalPeriod__c/validationRules/clariti__StartDateIsGreaterThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__StartDateIsGreaterThanEndDate</fullName>
    <active>true</active>
    <description>End date can not occur on or before the start date</description>
    <errorConditionFormula>clariti__StartDate__c &gt;=  clariti__EndDate__c</errorConditionFormula>
    <errorDisplayField>clariti__EndDate__c</errorDisplayField>
    <errorMessage>End date can not occur on or before the start date.</errorMessage>
</ValidationRule>