force-app/main/default/objects/clariti__FiscalPeriod__c/validationRules/clariti__StartDateIsNotInFiscalYearRange.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__StartDateIsNotInFiscalYearRange</fullName>
    <active>true</active>
    <description>Start Date Timeframe - Start date can not occur before the Fiscal Year start date or after the Fiscal Year end date</description>
    <errorConditionFormula>AND(
        $CustomMetadata.clariti__FinancialsFeatureEnablementSettings__mdt.clariti__FiscalYearAndPeriodManagement.clariti__Enable__c,
        OR(
        ISNEW(),
        ISCHANGED(clariti__StartDate__c),
        ISCHANGED(clariti__FiscalYear__c)),
        OR(
        (clariti__StartDate__c &lt;
        clariti__FiscalYear__r.clariti__StartDate__c ),
        (clariti__StartDate__c &gt;
        clariti__FiscalYear__r.clariti__EndDate__c))
        )</errorConditionFormula>
    <errorDisplayField>clariti__StartDate__c</errorDisplayField>
    <errorMessage>The selected Start Date is outside of the related Fiscal Year date range.</errorMessage>
</ValidationRule>